src/test/resources/automata/cocos/invalid/NotExistingTransitionSource.aut
/* (c) https://github.com/MontiCore/monticore */

automata MissingInitialState {
  state s;

  a - t > s;
}
